buildscript {
    repositories {
        maven { url = 'https://litesy.bmclapi2.bangbang93.com/maven/' }
        maven { url = 'https://maven.aliyun.com/repository/public/' }
        maven { url = 'https://maven.minecraftforge.net/' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0.24'
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

def requiredGradleVersion = org.gradle.util.GradleVersion.version('8.8')
if (org.gradle.util.GradleVersion.current() != requiredGradleVersion) {
    throw new GradleException("KineticCore requires Gradle 8.8 exactly. Current Gradle: ${org.gradle.util.GradleVersion.current().version}")
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'

configurations {
    embed
    implementation.extendsFrom(embed)
}

configurations.configureEach {
    resolutionStrategy.cacheDynamicVersionsFor 99999, 'days'
    resolutionStrategy.cacheChangingModulesFor 99999, 'days'
}

def getDynamicVersion() {
    def useAuto = project.findProperty('use_auto_version')?.toString() ?: 'false'
    if (useAuto.toBoolean()) {
        return new java.text.SimpleDateFormat("yy.M.d").format(new Date())
    } else {
        return project.findProperty('mod_version')?.toString() ?: "0.0.0"
    }
}

def pVersion = getDynamicVersion()
def pGroup = project.findProperty('mod_group_id')?.toString() ?: "dev.xyat.kineticcore"
def pModId = project.findProperty('mod_id')?.toString() ?: "kineticcore"

version = pVersion
group = pGroup

base {
    archivesName.set(pModId)
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

def mixinConfigList = fileTree(
        dir: 'src/main/resources',
        include: 'kineticcore.mixins*.json'
).files.collect { File file -> file.name }.sort()

minecraft {
    mappings channel: project.findProperty('mapping_channel')?.toString() ?: 'official',
            version: project.findProperty('mapping_version')?.toString()
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            mods {
                "${pModId}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', pModId
            if (!mixinConfigList.isEmpty()) {
                mixinConfigList.each { configName ->
                    args "-mixin.config=${configName}"
                }
            }
        }

        server {
            property 'forge.enabledGameTestNamespaces', pModId
            args '--nogui'
            if (!mixinConfigList.isEmpty()) {
                mixinConfigList.each { configName ->
                    args "-mixin.config=${configName}"
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, "${pModId}.mixins.refmap.json"
    mixinConfigList.each { configName ->
        config configName
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

repositories {
    maven { url = 'https://litesy.bmclapi2.bangbang93.com/maven/' }
    maven { url = 'https://maven.aliyun.com/repository/public/' }
    maven { url = 'https://maven.minecraftforge.net/' }
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { url = 'https://maven.blamejared.com' }
    mavenCentral()

    flatDir {
        dir project.findProperty('local_libs_dir') ?: 'libs'
    }
}

def localMod = { String artifactName ->
    File libsDir = file(project.findProperty('local_libs_dir') ?: 'libs')

    if (!libsDir.exists() || !libsDir.isDirectory()) {
        throw new GradleException("Local libs directory does not exist: ${libsDir.absolutePath}")
    }

    File[] jars = libsDir.listFiles()
    if (jars == null) {
        throw new GradleException("Cannot read local libs directory: ${libsDir.absolutePath}")
    }

    String exactName = "${artifactName}.jar"
    String versionPrefix = "${artifactName}-"

    File exactMatch = jars.find { File candidate ->
        candidate.isFile() && candidate.name.equalsIgnoreCase(exactName)
    }

    if (exactMatch != null) {
        return "blank:${artifactName}:local"
    }

    def matches = jars.findAll { File candidate ->
        candidate.isFile()
                && candidate.name.toLowerCase().endsWith('.jar')
                && candidate.name.regionMatches(true, 0, versionPrefix, 0, versionPrefix.length())
    }.sort { File a, File b ->
        a.name <=> b.name
    }

    if (matches.isEmpty()) {
        throw new GradleException(
                "Cannot find local mod '${artifactName}' in ${libsDir.absolutePath}"
        )
    }

    if (matches.size() > 1) {
        throw new GradleException(
                "Multiple local mod files found for '${artifactName}': ${matches.collect { it.name }.join(', ')}"
        )
    }

    File selected = matches[0]
    String detectedVersion = selected.name.substring(
            versionPrefix.length(),
            selected.name.length() - 4
    )

    if (detectedVersion.isBlank()) {
        throw new GradleException("Cannot determine local mod version from ${selected.name}")
    }

    return "blank:${artifactName}:${detectedVersion}"
}

dependencies {
    minecraft "net.minecraftforge:forge:${project.findProperty('minecraft_version')?.toString()}-${project.findProperty('forge_version')?.toString()}"

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    compileOnly annotationProcessor("io.github.llamalad7:mixinextras-common:0.3.5")
    implementation fg.deobf("io.github.llamalad7:mixinextras-forge:0.3.5")

    embed 'com.github.promeg:tinypinyin:2.0.3'

    compileOnly fg.deobf(localMod('curios'))
    compileOnly fg.deobf(localMod('jei'))
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
            minecraft_version      : project.findProperty('minecraft_version')?.toString(),
            minecraft_version_range: project.findProperty('minecraft_version_range')?.toString(),
            forge_version          : project.findProperty('forge_version')?.toString(),
            forge_version_range    : project.findProperty('forge_version_range')?.toString(),
            loader_version_range   : project.findProperty('loader_version_range')?.toString(),
            mod_id                 : pModId,
            mod_name               : project.findProperty('mod_name')?.toString(),
            mod_license            : project.findProperty('mod_license')?.toString(),
            mod_version            : pVersion,
            mod_authors            : project.findProperty('mod_authors')?.toString(),
            mod_description        : project.findProperty('mod_description')?.toString()
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [
                project: project,
                file   : [jarVersion: pVersion]
        ]
    }
}

tasks.named('jar', Jar).configure {
    destinationDirectory.set(layout.buildDirectory.dir('tmp/kineticcore-internal'))
    archiveFileName.set("${pModId}-${project.version}-internal.jar")

    manifest {
        attributes([
                'Specification-Title'       : pModId,
                'Specification-Vendor'      : project.findProperty('mod_authors')?.toString() ?: "Unknown",
                'Specification-Version'     : '1',
                'Implementation-Title'      : project.name,
                'Implementation-Version'    : pVersion,
                'Implementation-Vendor'     : project.findProperty('mod_authors')?.toString() ?: "Unknown",
                'Implementation-Timestamp'  : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'MixinConfigs'              : mixinConfigList.join(',')
        ])
    }
}

shadowJar {
    def customOutputDir = project.findProperty('output_mods_dir')
    if (customOutputDir) {
        destinationDirectory = file(customOutputDir)
    }

    archiveFileName.set("${pModId}-${project.version}.jar")

    configurations = [project.configurations.embed]

    relocate 'com.github.promeg.pinyinhelper', "${pGroup}.shadow.pinyinhelper"

    exclude 'META-INF/MANIFEST.MF'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'

    finalizedBy 'reobfShadowJar'
}

reobf {
    shadowJar {}
}

assemble.dependsOn shadowJar

tasks.named('assemble').configure {
    doLast {
        delete(tasks.named('jar').get().archiveFile.get().asFile)
    }
}

tasks.register('runClientIDE') {
    group = 'build'
    description = 'Start Forge development client (wrapper around runClient)'
    dependsOn 'runClient'
}

tasks.register('runServerIDE') {
    group = 'build'
    description = 'Start Forge development server (wrapper around runServer)'
    dependsOn 'runServer'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['-nowarn', '-Xlint:none', '-Amixin.target.allowUnresolvedTarget=true', '-Amixin.suppressTargetWarnings=true'])
}

def kineticApiJavadoc = tasks.register('kineticApiJavadoc', Javadoc) {
    group = 'documentation'
    description = 'Generates browsable Javadoc for the public Kinetic API.'

    source = fileTree('src/main/java') {
        include 'dev/xyat/kineticcore/api/**/*.java'
    }
    classpath = sourceSets.main.compileClasspath + sourceSets.main.output
    destinationDir = layout.projectDirectory.dir('javadoc').asFile

    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.docEncoding = 'UTF-8'
    options.windowTitle = "KineticCore ${project.version} API"
    options.docTitle = "KineticCore ${project.version} API"
    options.addBooleanOption('Xdoclint:none', true)
    options.quiet()
    options.addStringOption('sourcepath', file('src/main/java').absolutePath)
    failOnError = true

    onlyIf {
        def compileTask = tasks.named('compileJava').get()
        compileTask.state.failure == null
    }
}

// This task is opt-in: normal build/compileJava must not generate Javadoc.
tasks.register('buildJavaDOC', Zip) {
    group = 'build'
    description = 'Generate public KineticCore API Javadoc and package it as a shareable ZIP.'
    dependsOn kineticApiJavadoc

    archiveFileName.set("KineticCore-javadoc-${project.version}.zip")
    destinationDirectory.set(layout.projectDirectory)
    from(layout.projectDirectory.dir('javadoc')) {
        into 'javadoc'
    }
}

apply from: 'gradle/kinetic-architecture.gradle'
apply from: 'gradle/kinetic-api-verification.gradle'
